# parameter-expansion

./: .editorconfig  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pe.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  publish.yml  release.yml  test.yml  version.yml
parameter_expansion/: __init__.py  pe.py
parameter_expansion/tests/: test_pe.py
src/: .gitignore
src/parameter_expansion/: __init__.py
tests/: test_pe.py
