[tool.poetry]
name = "parameter-expansion"
version = "0.1.0"
description = "POSIX parameter expansion in Python"
authors = ["Michael A. Smith <michael@smith-li.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'

[tool.isort]
profile = 'black'

[tool.mypy]
files = [
    'parameter_expansion/*'
]
