[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# this is used populated when creating a git archive
# and when there is .git dir and/or there is no git installed
fallback_version = "9999.$Format:%h-%cs$"

[tool.black]
include = '\.pyi?$'

[tool.isort]
profile = 'black'

[tool.mypy]
files = [
    'src/**/*.py',
    'tests/**/*.py'
]
