[metadata]
name = parameter-expansion
description = Shell parameter expansion in Python
author = Michael A. Smith
author_email = michael@smith-li.com
readme = README.md
long_description = file: README.md
url = https://github.com/kojiromike/parameter-expansion
license_files = LICENSE
keywords = parameter expansion, shell, POSIX, bash
license = Apache License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
include_package_data = False
package_dir=
    = src
packages = find:
setup_requires =
    setuptools-scm

[options.packages.find]
where = src
