[metadata]
name = parameter-expansion-patched
description = Shell parameter expansion in Python. Patched by co-maintainer for a PyPI release.
author = Michael A. Smith and Philippe Ombredanne
author_email = michael@smith-li.com
readme = README.md
long_description = file: README.md
long_description_content_type = text/x-rst
url = https://github.com/nexB/parameter-expansion-patched


license_files = LICENSE
keywords = parameter expansion, shell, POSIX, bash
license = Apache-2.0
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = False
package_dir=
    = src
packages = find:

[options.packages.find]
where = src
